--- a/package.json
+++ b/package.json
@@ -43,21 +43,30 @@
   "bugs": {
     "url": "https://github.com/MoustaphaDev/prestd-api-client/issues"
   },
+  "jest": {
+    "automock": false,
+    "resetMocks": false,
+    "setupFiles": [
+      "./setupJest.js"
+    ]
+  },
   "homepage": "https://github.com/MoustaphaDev/prestd-api-client#readme",
   "devDependencies": {
-    "commitizen": "^4.2.5",
-    "cz-conventional-changelog": "^3.3.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^12.20.11",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
+    "commitizen": "^4.2.5",
     "conventional-changelog-conventionalcommits": "^5.0.0",
+    "cz-conventional-changelog": "^3.3.0",
+    "dotenv": "^16.0.1",
     "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.4.0",
     "husky": "^6.0.0",
     "jest": "^27.2.0",
+    "jest-fetch-mock": "^3.0.3",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "semantic-release": "^19.0.2",
@@ -117,5 +126,8 @@
       "@semantic-release/npm",
       "@semantic-release/github"
     ]
+  },
+  "dependencies": {
+    "prestd-api-client": "^1.0.0"
   }
 }
